--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,37 +11,22 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@codemirror/lang-javascript": "^6.2.2",
-    "@codemirror/state": "^6.4.1",
-    "@codemirror/theme-one-dark": "^6.1.2",
-    "@codemirror/view": "^6.29.1",
-    "@hello-pangea/dnd": "^16.6.0",
     "@heroicons/react": "^2.1.5",
-    "@hookform/resolvers": "^3.9.0",
-    "@radix-ui/react-checkbox": "^1.1.1",
-    "@radix-ui/react-hover-card": "^1.1.1",
     "@radix-ui/react-label": "^2.1.0",
-    "@radix-ui/react-radio-group": "^1.2.0",
-    "@radix-ui/react-select": "^2.1.1",
     "@radix-ui/react-slot": "^1.1.0",
-    "@uiw/react-codemirror": "^4.23.0",
     "axios": "^1.7.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "js-file-download": "^0.4.12",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.400.0",
-    "path": "^0.12.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-hook-form": "^7.52.1",
     "react-router-dom": "^6.24.0",
     "react-slick": "^0.30.2",
     "slick-carousel": "^1.8.1",
     "tailwind-merge": "^2.3.0",
-    "tailwindcss-animate": "^1.0.7",
-    "uuid": "^10.0.0",
-    "zod": "^3.23.8"
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@types/node": "^20.14.9",
